--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This is the repository with materials for PhD seminar on Julia language that I gave on 02.03.2016 at UiO. They are inspired by talks by Jeff Bezanson, Steve Johnson and Stefan Karpinski which can be found on YouTube (see the Jupyter notebook).
+This is a repository with materials for PhD seminar on Julia language that I gave on 02.03.2016 at UiO. They are inspired by talks of Jeff Bezanson, Steve Johnson and Stefan Karpinski which can be found on YouTube (see the Jupyter notebook).
