--- a/julia_intro_uio_phd_seminar.ipynb
+++ b/julia_intro_uio_phd_seminar.ipynb
@@ -129,7 +129,8 @@
     "    - JIT compiler\n",
     "    - multiple dispatch\n",
     "    - metaprogramming\n",
-    "    - built in parallelism"
+    "    - built in parallelism\n",
+    "    - zero overhead C/Fortran calls (__CXX.jl__ offers some support for calling C++)"
    ]
   },
   {
@@ -265,7 +266,7 @@
    "source": [
     "### Julia fractal\n",
     "+ It is only approprate that we explore the Julia set\n",
-    "+ Explore points $z$ such that $z_{n+1}=z^2_{n}+c$ is bounded for any n"
+    "+ Explore points $z$ in the complex plain such that $z_{n+1}=z^2_{n}+c$ is bounded for any n"
    ]
   },
   {
@@ -286,6 +287,17 @@
     "        z = z*z + c\n",
     "    end\n",
     "    return 80\n",
+    "end\n",
+    "\n",
+    "\"\"\"Color Julia set. Prealoc version\"\"\"\n",
+    "function julia(x, y, c)\n",
+    "    J = zeros(length(x), length(y))\n",
+    "    index = 0\n",
+    "    for r in y, i in x\n",
+    "        index += 1\n",
+    "        J[index] = julia(complex(r, i), c);\n",
+    "    end\n",
+    "    J\n",
     "end"
    ]
   },
@@ -297,7 +309,7 @@
    },
    "outputs": [],
    "source": [
-    "# We explore few points\n",
+    "# We explore a few points\n",
     "cs = (complex(-0.06, 0.67), complex(0.279, 0), complex(-0.4, 0.6), complex(0.285, 0.01))\n",
     "\n",
     "x = collect(1:-0.002:-1);\n",
@@ -308,12 +320,12 @@
     "t0 = tic()\n",
     "for c in cs\n",
     "    #push!(Js, [julia(complex(r, i), c) for i in x, r in y]);\n",
-    "    push!(julia_faster(x, y, c))\n",
+    "    push!(Js, julia(x, y, c));\n",
     "end\n",
     "t1 = toc()\n",
     "\n",
     "@printf(\"Generated in %.4f s\\n\", t1);\n",
-    "println(\"Image size $(size(J, 1))x$(size(J, 2))\")"
+    "println(\"Image size $(size(Js[1], 1))x$(size(Js[1], 2))\")"
    ]
   },
   {
@@ -339,7 +351,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "About 4 seconds is required to make the fractals. This is slower then Python which takes about 2.8. However the speed comes from clever vectorization. And don't worry the code above can be made faster."
+    "About 4 seconds is required to make the fractals by list comprehensions. This is slower then Python which takes about 2.8. However the speed there comes from clever vectorization. And don't worry the code above can be made faster. If the image is prealocated and filled column by column, see `julia(x, y, c)`, the fractals are generated in 0.4s. Note that at this point we have to `julia` methods. Which one gets called when the code is run is our first example with _multiple dispatch_."
    ]
   },
   {
@@ -348,7 +360,7 @@
    "source": [
     "## WHEN IT READS LIKE PYTHON\n",
     "\n",
-    "+ Illustrate (not unrealistic) workflow by a made of postprocessing example\n",
+    "+ Illustrate (not unrealistic) workflow by a made example of postprocessing \n",
     "+ Note that this is high-level: there are lambdas `x -> x + 1`, higher order functions, containers\n",
     "+ No type declarations"
    ]
@@ -421,6 +433,19 @@
     "words = split(content, r\"\\W\", keep=false)\n",
     "close(LICENCE)\n",
     "length(words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# We could have done this with bash. Show shell interopt\n",
+    "cmd = pipeline(`cat LICENSE`, `wc -w`)\n",
+    "run(cmd)  # 172 vs 171, less than 1% error is okay:)"
    ]
   },
   {
@@ -808,9 +833,16 @@
    "source": [
     "## WHEN IT _IS NOT_ PYTHON / REASONS FOR SPEED\n",
     "\n",
-    "I do not know/understand the whole story. It seems magical. That said, let me quote the Julia manual:\n",
+    "Warning: I do not know/understand the whole story. It seems magical. That said, let me quote the Julia manual:\n",
     "\n",
-    "> Clever application of sufficiently advanced technology can be indistiguishable from magic (A.C. Clarke)"
+    "> Clever application of sufficiently advanced technology can be indistiguishable from magic (A. C. Clarke)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### JIT and type inference"
    ]
   },
   {
@@ -867,7 +899,205 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## CALLING C"
+    "### Type stability\n",
+    "+ You do not have to talk about types when writing Julia code\n",
+    "+ Compiler does its best to remove uncertainties about types from the code but this is not always possible\n",
+    "+ The generated code must then handle the uncertainty, unboxing\n",
+    "+ Consider this example (Introducing Julia and Julia manual)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Type INstability of s\n",
+    "function unstable(n)\n",
+    "    s = 0          # S is Float\n",
+    "    for i in 1:n\n",
+    "        s += s/i   # S is Float\n",
+    "    end\n",
+    "end\n",
+    "\n",
+    "# Type stability of s\n",
+    "function stable(n)\n",
+    "    s = 0.0         # S is Float\n",
+    "    for i in 1:n\n",
+    "        s += s/i   # S is Float\n",
+    "    end\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's compare the speed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "@time stable(1000000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "@time unstable(1000000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "println(\"The speed difference is huge \", 0.063284/0.000002, \". And so is the difference in the number of lines of generated code\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "@code_llvm stable(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "@code_llvm unstable(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CALLING C\n",
+    "\n",
+    "+ C functions available in shared libraries can be accessed via `ccall`\n",
+    "+ In this case Julia's JIT generates code such calling the C function from Julia is as fast as the call from native C\n",
+    "+ The syntax to `ccall` required function name, library, return type, tuple of input types and the values for input parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Example setenv via libc\n",
+    "function my_setenv(var::AbstractString, value::AbstractString)\n",
+    "    ccall((:setenv, \"libc\"), Cint, (Ptr{UInt8}, Ptr{UInt8}, Cint), var, value, 1)\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "my_setenv(\"TODAY\", \"TUESDAY\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# We will write getenv to check it\n",
+    "function my_getenv(var::AbstractString)\n",
+    "    bytestring(ccall((:getenv, \"libc\"), Ptr{UInt8}, (Ptr{UInt8}, ), var))\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "my_getenv(\"TODAY\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Polynomial evaluation using GNU scientific library\n",
+    "\"\"\"Evaluate polynomial c[1]*x^0 + c[2]*x^1 ... at x\"\"\"\n",
+    "function polyval{T, S}(c::Vector{T}, x::S)\n",
+    "    c = convert(Vector{Float64}, c)\n",
+    "    n = length(c)\n",
+    "    value = ccall((:gsl_poly_eval, \"libgsl\"), Cdouble, (Ptr{Cdouble}, Cint, Cdouble), c, n, x)\n",
+    "    Float64(value)\n",
+    "end\n",
+    "\n",
+    "\"\"\"Vectorized version\"\"\"\n",
+    "function polyval{T, S}(c::Vector{T}, X::Vector{S})\n",
+    "    [polyval(c, x) for x in X]\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Plot some random polynomials\n",
+    "using PyCall\n",
+    "@pyimport matplotlib.pyplot as plt\n",
+    "\n",
+    "x = collect(linspace(-1, 1, 100))\n",
+    "\n",
+    "plt.figure()\n",
+    "for i in 1:4\n",
+    "    c = rand(5)\n",
+    "    y = polyval(c, x)\n",
+    "    plt.plot(x, y)\n",
+    "end\n",
+    "plt.show()"
    ]
   },
   {
@@ -883,7 +1113,7 @@
    "source": [
     "## BATTERIES INCLUDED\n",
     "\n",
-    "+ Julia has very large scientific stack, e.g. FFT (FFTW by Steven G. Johnson), LA(LAPACK, BLAS, SuiteSparse), statistics\n",
+    "+ Julia has a very large scientific stack, e.g. FFT (FFTW by Steven G. Johnson), LA(LAPACK, BLAS, SuiteSparse), statistics\n",
     "+ Native plotting, e.g. _Gadfly_ package\n",
     "+ You can use Python modules(`PyCall`), existing C/Fortran libraries(`ccall`)\n",
     "+ Opportunity to write missing packages!"
@@ -922,47 +1152,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "factorize(S::<b>SymTridiagonal{T}</b>) at <a href=\"https://github.com/JuliaLang/julia/tree/1a9429ee5e240e478f0240a31629f9de75338690/base/linalg/ldlt.jl#L46\" target=\"_blank\">linalg/ldlt.jl:46</a>"
-      ],
-      "text/plain": [
-       "factorize(S::SymTridiagonal{T}) at linalg/ldlt.jl:46"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "05742739384431261\n",
-      "0.00406087309076182\n",
-      "0.002871496220147093\n",
-      "0.0020304589269507247\n",
-      "0.0014357520673215604\n",
-      "0.0010152301641646005\n",
-      "0.0007178761457711251\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Linear algebra. The favourite Poisson problem on UnitInterval. Convergence\n",
+    "# Linear algebra. The favourite Poisson problem on UnitInterval. Convergence of CG1 FEM\n",
     "A = 0  # Keep A outside for loop\n",
     "for ncells in [2^i for i in 8:14]\n",
     "    h = 1/ncells\n",
@@ -985,38 +1181,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "System size 9, lmin=5.396945915394443\n",
-      "System size 17, lmin=3.094555556451626\n",
-      "System size 33, lmin=1.4650779232335207\n",
-      "System size 65, lmin=0.6797474241796966\n",
-      "System size 129, lmin=0.32442205306690397\n",
-      "System size 257, lmin=0.1582254302874535\n",
-      "System size 513, lmin=0.07811004502728203\n",
-      "System size 1025, lmin=0.03880408264532953\n",
-      "System size 2049, lmin=0.01933930544917395\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# And now the eigenvalues. Convergence\n",
+    "# And now the eigenvalues. Convergence of the smallest eig of -u'' = lambda* u in (0, 1) with homog. Dirichlet bcs\n",
     "for ncells in [2^i for i in 3:11]\n",
     "    h = 1/ncells\n",
     "    x = Float64[h*i for i in 0:ncells]\n",
     "\n",
     "    A = SymTridiagonal(fill(2, ncells+1), fill(-1, ncells))/h\n",
     "    M = SymTridiagonal([1.; fill(4h/6, ncells-1); 1.], fill(h/6, ncells))\n",
-    "    eigw, eigv = eig(full(A), full(M))\n",
+    "    \n",
+    "    eigw, eigv = eig(full(A), full(M))                          # Dense\n",
+    "    # eigw = first(eigs(sparse(A), sparse(M), nev=6, which=:SM))  # Sparse\n",
+    "\n",
     "    lmin = minimum(eigw)\n",
-    "    println(\"System size $(length(eigw)), lmin=$(abs(lmin-π^2))\")\n",
+    "    println(\"System size $(length(eigw)), error in λ=$(abs(lmin-π^2))\")\n",
     "end"
    ]
   },
@@ -1032,7 +1215,7 @@
     "    - Introduction [Steven Johnson](https://www.youtube.com/watch?v=jhlVHoeB05A) @ EuroScipy\n",
     "    - Introduction [Alan Edelman](https://www.youtube.com/watch?v=37L1OMk_3FU) @ MIT\n",
     "    - Some metaprogramming [Jeff Bezanson, Stefan Karpinski](https://www.youtube.com/watch?v=pZTqMSM2ksY) @ Curry On\n",
-    "    - Julia + Python [Stefan Karpinksi](https://www.youtube.com/watch?v=PsjANO10KgM)@ PyDATA\n",
+    "    - Julia + Python [Stefan Karpinksi](https://www.youtube.com/watch?v=PsjANO10KgM) @ PyDATA\n",
     "    - ... and plenty others from [JuliaCon](http://juliacon.org/). See Julia's [YouTube](https://www.youtube.com/user/JuliaLanguage/videos) channel.\n",
     "+ Blog posts (mostly metaprogramming)\n",
     "    - [John Myles White](http://www.johnmyleswhite.com/notebook/category/julia/)\n",
