--- a/py_julia_intro_uio_phd_seminar.ipynb
+++ b/py_julia_intro_uio_phd_seminar.ipynb
@@ -106,7 +106,7 @@
     "    \n",
     "    C = c*np.ones(Z.shape, dtype=complex)\n",
     "    img = 80*np.ones(C.shape, dtype=int)\n",
-    "    \n",
+    "    # We will shrink Z, C inside the loop if certain point is found unbounded\n",
     "    ix, iy = np.mgrid[0:Z.shape[0], 0:Z.shape[1]]\n",
     "    Z, C, ix, iy = map(lambda mat: mat.flatten(), (Z, C, ix, iy))\n",
     "\n",
@@ -133,8 +133,8 @@
    "source": [
     "cs = (complex(-0.06, 0.67), complex(0.279, 0), complex(-0.4, 0.6), complex(0.285, 0.01))\n",
     "\n",
-    "x = np.arange(1, -1, -0.002)\n",
-    "y = np.arange(-1.5, 1.5, 0.002)\n",
+    "x = np.arange(-1.5, 1.5, 0.002)\n",
+    "y = np.arange(1, -1, -0.002)\n",
     "\n",
     "Js = []\n",
     "# Evaluate fractal generation\n",
@@ -143,7 +143,7 @@
     "    Js.append(julia(x, y, c))\n",
     "t1 = time.time() - t0\n",
     "print 'Generated in %.4f s' % t1\n",
-    "print 'Image size %d x %d' % J.shape"
+    "print 'Image size %d x %d' % Js[0].shape"
    ]
   },
   {
@@ -161,6 +161,15 @@
     "    plt.imshow(J, cmap=\"viridis\", extent=[-1.5, 1.5, -1, 1])\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
