--- a/julia_intro_uio_phd_seminar.ipynb
+++ b/julia_intro_uio_phd_seminar.ipynb
@@ -319,8 +319,8 @@
     "# Evaluate fractal generation\n",
     "t0 = tic()\n",
     "for c in cs\n",
-    "    #push!(Js, [julia(complex(r, i), c) for i in x, r in y]);\n",
-    "    push!(Js, julia(x, y, c));\n",
+    "    push!(Js, [julia(complex(r, i), c) for i in x, r in y]);\n",
+    "    #push!(Js, julia(x, y, c));\n",
     "end\n",
     "t1 = toc()\n",
     "\n",
@@ -899,11 +899,281 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Type system\n",
+    "All values have types. You can type annotate your variables. This is not for performance. Rather, you declare your intensions better."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "map(typeof, (1, 2., [1, 2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# This reads as is lhs an instance of rhs\n",
+    "1::Number, 1::Real, 1::Int"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# But \n",
+    "try\n",
+    "    1::Int8\n",
+    "catch TypeError\n",
+    "    println(\"Type of 1 is $(typeof(1)) and that is not a subtype of Int8\")\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The type hierarchy is appearing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "depth = 0\n",
+    "function printtypes(T)\n",
+    "    global depth\n",
+    "    if isleaftype(T)\n",
+    "        println(\"-\"^(2*depth), \"$T\")\n",
+    "    else\n",
+    "        println(\"-\"^depth, \"$T\")\n",
+    "        depth += 1\n",
+    "        map(printtypes, subtypes(T))\n",
+    "        depth -= 1\n",
+    "    end\n",
+    "end\n",
+    "\n",
+    "printtypes(Real);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ In the type tree the nodes are _abstract_ types and the leafs are _concrete_ types.\n",
+    "+ The abstract types express concepts and there are no instances of it but singletons. \n",
+    "+ The concete types can have instances but cannot be subtyped."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Multiple dispatch\n",
+    "\n",
+    "If types are specified in the functions signature the compiler (first compiles and then) calls appropiate function based on the type of all the arguments. That is, unlike in OO programing, it is not the first types that owns the method. There is nothing special about the first argument; think Int.__add__(self, other) in Python. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# + is a function +(x, y) = ... . Which one is called based on args\n",
+    "@which 1+3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "@which 0x1+0x3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "@which 1+2."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "New types can be defined easily."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "\"\"\"Polynomial with value c[i]*sin(i*pi*x)\"\"\"\n",
+    "immutable SinePolynomial{T<:Real}\n",
+    "    coefs::Vector{T}\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# If not specified otherwise our parent is Any - the very tip of the type tree\n",
+    "super(SinePolynomial)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Our type is composite i.e. has fields\n",
+    "fieldnames(SinePolynomial)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To add 'its methods' we define functions with the new type. These are added to the dispatcher's system and called when needed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import Base: +, -, call\n",
+    "# Add () for evaluating the polynomial\n",
+    "call{T}(p::SinePolynomial{T}, x::Real) = sum([c*sum(k*π*x) for (k, c) in enumerate(p.coefs)])\n",
+    "\n",
+    "# We can add/subtract polynomials. This is simple because of othogonality\n",
+    "function +{T, S}(p::SinePolynomial{T}, q::SinePolynomial{S})\n",
+    "    np, nq = length(p.coefs), length(q.coefs)\n",
+    "    n = max(np, nq)\n",
+    "    p = [p.coefs; zeros(T, n-np)]\n",
+    "    q = [q.coefs; zeros(S, n-nq)]\n",
+    "    SinePolynomial(p+q)\n",
+    "end\n",
+    "\n",
+    "function -{T, S}(p::SinePolynomial{T}, q::SinePolynomial{S})\n",
+    "    np, nq = length(p.coefs), length(q.coefs)\n",
+    "    n = max(np, nq)\n",
+    "    p = [p.coefs; zeros(T, n-np)]\n",
+    "    q = [q.coefs; zeros(S, n-nq)]\n",
+    "    SinePolynomial(p-q)\n",
+    "end\n",
+    "\n",
+    "# See that + has been added to lookup table for dispatching\n",
+    "last(methods(+))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import Base.*\n",
+    "# We better prevent multiplications\n",
+    "*{T, S}(p::SinePolynomial{T}, q::SinePolynomial{S}) = throw(ArgumentError(\"No multiplication until CosinePolynomial\"))\n",
+    "\n",
+    "p = SinePolynomial([1, 2, 3])\n",
+    "q = SinePolynomial([2, -1])\n",
+    "\n",
+    "try\n",
+    "    p*q\n",
+    "catch ArgumentError\n",
+    "    println(\"Is it okay? \", applicable(*, (typeof(p), typeof(q))))\n",
+    "    nothing\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Suppose we want to vectorize the evaluation. In Python we could use _duck typing_ and see if the input supports iteration. Here we simply define new method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "Base.call{T}(p::SinePolynomial{T}, X) = [p(x) for x in X]\n",
+    "\n",
+    "x = linspace(-1, 1, 100)\n",
+    "length(p(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "@which p(x)         # See which one was celled"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Type stability\n",
     "+ You do not have to talk about types when writing Julia code\n",
     "+ Compiler does its best to remove uncertainties about types from the code but this is not always possible\n",
     "+ The generated code must then handle the uncertainty, unboxing\n",
-    "+ Consider this example (Introducing Julia and Julia manual)"
+    "+ Consider this example (taken from Introducing Julia and Julia manual)"
    ]
   },
   {
@@ -997,11 +1267,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## CALLING C\n",
+    "### CALLING C\n",
     "\n",
     "+ C functions available in shared libraries can be accessed via `ccall`\n",
     "+ In this case Julia's JIT generates code such calling the C function from Julia is as fast as the call from native C\n",
-    "+ The syntax to `ccall` required function name, library, return type, tuple of input types and the values for input parameters"
+    "+ The arguments to `ccall` are function name, library, return type, tuple of input types and the values for input parameters"
    ]
   },
   {
@@ -1064,7 +1334,7 @@
    "source": [
     "# Polynomial evaluation using GNU scientific library\n",
     "\"\"\"Evaluate polynomial c[1]*x^0 + c[2]*x^1 ... at x\"\"\"\n",
-    "function polyval{T, S}(c::Vector{T}, x::S)\n",
+    "function polyval{T<:Real, S<:Real}(c::Vector{T}, x::S)\n",
     "    c = convert(Vector{Float64}, c)\n",
     "    n = length(c)\n",
     "    value = ccall((:gsl_poly_eval, \"libgsl\"), Cdouble, (Ptr{Cdouble}, Cint, Cdouble), c, n, x)\n",
@@ -1089,7 +1359,7 @@
     "using PyCall\n",
     "@pyimport matplotlib.pyplot as plt\n",
     "\n",
-    "x = collect(linspace(-1, 1, 100))\n",
+    "x = collect(linspace(-1, 1, 100)) # 1im will\n",
     "\n",
     "plt.figure()\n",
     "for i in 1:4\n",
@@ -1104,7 +1374,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## METAPROGRAMMING"
+    "### METAPROGRAMMING"
    ]
   },
   {
@@ -1201,6 +1471,15 @@
     "    lmin = minimum(eigw)\n",
     "    println(\"System size $(length(eigw)), error in λ=$(abs(lmin-π^2))\")\n",
     "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusions\n",
+    "+ If you spend a few hours browsing the standard library including the growing number of packages and find out that all you need is available then I highly recommend picking up the language.\n",
+    "+ Note that new libraries, even if they are _just_ rewrites of old code, can be buggy."
    ]
   },
   {
