metap done. now checks

--- a/julia_intro_uio_phd_seminar.ipynb
+++ b/julia_intro_uio_phd_seminar.ipynb
@@ -47,7 +47,7 @@
     "    - Julian mode, help mode(?), shell mode(;)\n",
     "    - ! `edit`\n",
     "+ text editor + command line\n",
-    "    - ! Demo\n",
+    "    - ! Hello world\n",
     "+ Jupyter notebook\n",
     "    - From inside Julia run `Pkg.add(\"IJulia\")`. This gives you Julia kernel that the notebook can talk to\n",
     "    - This is the notebok :)"
@@ -61,6 +61,7 @@
    },
    "outputs": [],
    "source": [
+    "# Here is another feature - a built in package manager\n",
     "installed_packages = Pkg.installed()\n",
     "# len tab\n",
     "length(installed_packages)"
@@ -124,13 +125,13 @@
     "+ Free and open-source. MIT licence\n",
     "+ Went [viral](https://www.google.com/trends/explore#q=julia%20language) on Valentine's day 2014\n",
     "+ Some features we will see in action today\n",
-    "    - rich typestem\n",
     "    - type inference\n",
     "    - JIT compiler\n",
+    "    - rich typestem\n",
     "    - multiple dispatch\n",
-    "    - metaprogramming\n",
-    "    - built in parallelism\n",
-    "    - zero overhead C/Fortran calls (__CXX.jl__ offers some support for calling C++)"
+    "    - zero overhead C/Fortran calls (__CXX.jl__ offers some support for calling C++)\n",
+    "    - metaprogramming (only briefly)\n",
+    "+ An important feature missing today is _built in parallelism_"
    ]
   },
   {
@@ -351,7 +352,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "About 4 seconds is required to make the fractals by list comprehensions. This is slower then Python which takes about 2.8. However the speed there comes from clever vectorization. And don't worry the code above can be made faster. If the image is prealocated and filled column by column, see `julia(x, y, c)`, the fractals are generated in 0.4s. Note that at this point we have to `julia` methods. Which one gets called when the code is run is our first example with _multiple dispatch_."
+    "About 4 seconds is required to make the fractals by list comprehensions. This is slower then Python which takes about 2.8. However the speed there comes from clever vectorization. And don't worry the code above can be made faster. If the image is prealocated and filled column by column, see `julia(x, y, c)`, the fractals are generated in 0.4s. Note that at this point we have two `julia` methods. Which one gets called when the code is run is our first encounter with _multiple dispatch_."
    ]
   },
   {
@@ -532,7 +533,7 @@
    },
    "outputs": [],
    "source": [
-    "# Sting concatenation is done with *. With + the operation should be commutative, which is not the case here\n",
+    "# String concatenation is done with *. With + the operation should be commutative, which is not the case here\n",
     "\"Julia \" * \" Language\""
    ]
   },
@@ -1171,7 +1172,7 @@
    "source": [
     "### Type stability\n",
     "+ You do not have to talk about types when writing Julia code\n",
-    "+ Compiler does its best to remove uncertainties about types from the code but this is not always possible\n",
+    "+ Compiler does its best to remove uncertainties about types when analyzing the code but this is not always possible\n",
     "+ The generated code must then handle the uncertainty, unboxing\n",
     "+ Consider this example (taken from Introducing Julia and Julia manual)"
    ]
@@ -1249,6 +1250,7 @@
    },
    "outputs": [],
    "source": [
+    "# Run @code_warntype here as well to see the (un)certainty\n",
     "@code_llvm stable(3)"
    ]
   },
@@ -1374,7 +1376,382 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### METAPROGRAMMING"
+    "### METAPROGRAMMING\n",
+    "\n",
+    "Julia is _homoiconic_ - the code is representable as a data structure in the language. The structure can be manipulated."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# A basis building block is symbol\n",
+    "typeof(:x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Symbols can be combined into expressions\n",
+    "f_def = quote\n",
+    "    cheer(name) = name * \"!\"\n",
+    "end\n",
+    "\n",
+    "Meta.show_sexpr(f_def)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# And expression can be manipulated. Change the name to yell and !!\n",
+    "f_def.args[2].args[1].args[1] = :yell;\n",
+    "f_def.args[2].args[2].args[2].args[3] = \"!!!\";"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Expressions can be evaluated. There will be no cheer.\n",
+    "eval(f_def);\n",
+    "@assert isdefined(:cheer) == false"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# However we can yell\n",
+    "yell(\"Fire\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The technique is useful when you need to generate a lot of boiler plate code. [Here's](https://github.com/JuliaLang/julia/blob/master/base/linalg/lapack.jl#L110) how Julia generates wrappers for some BLAS functions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next metaprogramming tools are _macros_. Using macros a customized code block can be included into a body of some existing code before its execution. Macros are denoted by @. We've already seen @time, @assert, @code_llvm."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# When is macro run?\n",
+    "macro makeuppercase(f)   \n",
+    "    println(\"I was called.\")\n",
+    "    return Expr(:call, :uppercase, f)\n",
+    "end\n",
+    "\n",
+    "# When the code is parsed the macro executes and changes body of f \n",
+    "function transform(text::AbstractString)\n",
+    "    @makeuppercase text\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# It does not exacute when the function is run.\n",
+    "transform(\"ApuhuAs\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here is a more impressive [example](https://github.com/JuliaLang/julia/blob/master/base/special/erf.jl) from the standard library which computes the inverse of the error function. The idea is that based on the values of argument different polynomial approximation is used. The polynomials are evaluated using Horner's rule and using macro the code for the polynomial evaluation is inlined."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# We try to write the same code but evaluation of the polynomial will be done via call to external routine.\n",
+    "function _horner(x, p...)\n",
+    "    c = p[end]\n",
+    "    for i in length(p)-1:-1:1\n",
+    "        c = p[i] + c*x\n",
+    "    end\n",
+    "    c\n",
+    "end\n",
+    "\n",
+    "function _erfinv(x::Float64)\n",
+    "    a = abs(x)\n",
+    "    if a >= 1.0\n",
+    "        if x == 1.0\n",
+    "            return Inf\n",
+    "        elseif x == -1.0\n",
+    "            return -Inf\n",
+    "        end\n",
+    "        throw(DomainError())\n",
+    "    elseif a <= 0.75 # Table 17 in Blair et al.\n",
+    "        t = x*x - 0.5625\n",
+    "        return x * _horner(t, 0.16030_49558_44066_229311e2,\n",
+    "                             -0.90784_95926_29603_26650e2,\n",
+    "                              0.18644_91486_16209_87391e3,\n",
+    "                             -0.16900_14273_46423_82420e3,\n",
+    "                              0.65454_66284_79448_7048e2,\n",
+    "                             -0.86421_30115_87247_794e1,\n",
+    "                              0.17605_87821_39059_0) /\n",
+    "                   _horner(t, 0.14780_64707_15138_316110e2,\n",
+    "                             -0.91374_16702_42603_13936e2,\n",
+    "                              0.21015_79048_62053_17714e3,\n",
+    "                             -0.22210_25412_18551_32366e3,\n",
+    "                              0.10760_45391_60551_23830e3,\n",
+    "                             -0.20601_07303_28265_443e2,\n",
+    "                              0.1e1)\n",
+    "    elseif a <= 0.9375 # Table 37 in Blair et al.\n",
+    "        t = x*x - 0.87890625\n",
+    "        return x * _horner(t, -0.15238_92634_40726_128e-1,\n",
+    "                               0.34445_56924_13612_5216,\n",
+    "                              -0.29344_39867_25424_78687e1,\n",
+    "                               0.11763_50570_52178_27302e2,\n",
+    "                              -0.22655_29282_31011_04193e2,\n",
+    "                               0.19121_33439_65803_30163e2,\n",
+    "                              -0.54789_27619_59831_8769e1,\n",
+    "                               0.23751_66890_24448) /\n",
+    "                   _horner(t, -0.10846_51696_02059_954e-1,\n",
+    "                               0.26106_28885_84307_8511,\n",
+    "                              -0.24068_31810_43937_57995e1,\n",
+    "                               0.10695_12997_33870_14469e2,\n",
+    "                              -0.23716_71552_15965_81025e2,\n",
+    "                               0.24640_15894_39172_84883e2,\n",
+    "                              -0.10014_37634_97830_70835e2,\n",
+    "                               0.1e1)\n",
+    "    else # Table 57 in Blair et al.\n",
+    "        t = 1.0 / sqrt(-log(1.0 - a))\n",
+    "        return _horner(t, 0.10501_31152_37334_38116e-3,\n",
+    "                          0.10532_61131_42333_38164_25e-1,\n",
+    "                          0.26987_80273_62432_83544_516,\n",
+    "                          0.23268_69578_89196_90806_414e1,\n",
+    "                          0.71678_54794_91079_96810_001e1,\n",
+    "                          0.85475_61182_21678_27825_185e1,\n",
+    "                          0.68738_08807_35438_39802_913e1,\n",
+    "                          0.36270_02483_09587_08930_02e1,\n",
+    "                          0.88606_27392_96515_46814_9) /\n",
+    "              (copysign(t, x) *\n",
+    "               _horner(t, 0.10501_26668_70303_37690e-3,\n",
+    "                          0.10532_86230_09333_27531_11e-1,\n",
+    "                          0.27019_86237_37515_54845_553,\n",
+    "                          0.23501_43639_79702_53259_123e1,\n",
+    "                          0.76078_02878_58012_77064_351e1,\n",
+    "                          0.11181_58610_40569_07827_3451e2,\n",
+    "                          0.11948_78791_84353_96667_8438e2,\n",
+    "                          0.81922_40974_72699_07893_913e1,\n",
+    "                          0.40993_87907_63680_15361_45e1,\n",
+    "                          0.1e1))\n",
+    "    end\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Make sure it works\n",
+    "erfinv(0.002) - _erfinv(0.002)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Is there a difference in performance?\n",
+    "@time [erfinv(x) for x in -1:0.00001:1];"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# _erfinv is about 2x slower. Note the difference in memory\n",
+    "@time [_erfinv(x) for x in -1:0.00001:1];"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Final technique we will illustrate is _staged programming_. Using _@generated_ with function definition we can generated code based on the type of arguments. We work with type annotated AST. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# We make the polynomial degree available to the type system\n",
+    "\"x^n\"\n",
+    "type Monomial{n}\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "evaluate (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# We generate code based on n\n",
+    "@generated function evaluate{n}(::Monomial{n}, x::Real)\n",
+    "    println(\"I was called\")\n",
+    "    coefs = zeros(Real, n+1)\n",
+    "    coefs[n+1] = 1\n",
+    "    quote\n",
+    "        return Base.Math.@horner x $(coefs...)\n",
+    "    end\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I was called\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = Monomial{2}()\n",
+    "evaluate(p, 1.0)  # Print message"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evaluate(p, 2.0)  # No message"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I was called\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "81.0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evaluate(Monomial{4}(), 3.0)  # New type -> message"
    ]
   },
   {
@@ -1479,7 +1856,7 @@
    "source": [
     "## Conclusions\n",
     "+ If you spend a few hours browsing the standard library including the growing number of packages and find out that all you need is available then I highly recommend picking up the language.\n",
-    "+ Note that new libraries, even if they are _just_ rewrites of old code, can be buggy."
+    "+ Note that new libraries, even if they are _just_ rewrites of old code, can be buggy. Bad - you don't notice the bug. Good - you fix it and become a contributor."
    ]
   },
   {
