--- a/py_julia_intro_uio_phd_seminar.ipynb
+++ b/py_julia_intro_uio_phd_seminar.ipynb
@@ -8,49 +8,6 @@
    },
    "outputs": [],
    "source": [
-    "# Show that python is row majored\n",
-    "import numpy as np\n",
-    "\n",
-    "A = np.arange(1, 26).reshape(5, 5)\n",
-    "A"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# Row iteration in python\n",
-    "for row in A:\n",
-    "    row += 1\n",
-    "print A"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "try:\n",
-    "    A[8]\n",
-    "except IndexError:\n",
-    "    print \"No linear indexing\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
     "# Collatz\n",
     "def collatz_chain(n):\n",
     "    'Compute the Collatz chain for number n.'\n",
@@ -98,6 +55,8 @@
    },
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "# Adopted from https://thesamovar.wordpress.com/2009/03/22/fast-fractals-with-python-and-numpy/\n",
     "def julia(x, y, c):\n",
     "    X, Y = np.meshgrid(x, y)\n",
@@ -154,12 +113,56 @@
    },
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "for J in Js:\n",
     "    plt.figure()\n",
     "    plt.imshow(J, cmap=\"viridis\", extent=[-1.5, 1.5, -1, 1])\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Show that python is row majored\n",
+    "import numpy as np\n",
+    "\n",
+    "A = np.arange(1, 26).reshape(5, 5)\n",
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Row iteration in python\n",
+    "for row in A:\n",
+    "    row += 1\n",
+    "print A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    A[8]\n",
+    "except IndexError:\n",
+    "    print \"No linear indexing\""
    ]
   }
  ],
@@ -179,7 +182,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
