--- a/py_julia_intro_uio_phd_seminar.ipynb
+++ b/py_julia_intro_uio_phd_seminar.ipynb
@@ -117,7 +117,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "for J in Js:\n",
-    "    plt.figure()\n",
+    "    plt.figure(figsize=(12, 8))\n",
     "    plt.imshow(J, cmap=\"viridis\", extent=[-1.5, 1.5, -1, 1])\n",
     "plt.show()"
    ]
